@@ -1,4 +1,4 @@
-CALLER ID NAME CODES DOC	Started: 2013-07-15	Updated: 2018-01-23
+CALLER ID NAME CODES DOC	Started: 2013-07-15	Updated: 2018-04-20
 
 
 This document is meant for reference only, and it does not contain all CID name codes possible, but more will be added over time.
@@ -22,7 +22,8 @@ XBvdc - Agent blind transfer (XBvdcW14528875091001100110011001) [epoch + user...
 AGMON - Remote Agent Monitor (AGMON715224918000001)
 HLvdcW - Hangup of customer call from agent screen (HLvdcW1475524272tluc)
 CH123456 - Hangup of all non-agent channels in meetme session(CH1234614755246080)
-ULGC - Hangup of lone channel in left 3way session (ULGC3620170222100923)
+ULGC - Hangup of lone channel in left 3way session (ULGC0010420221616133)
+ULGH - Clearing of left 3way session after server rec limit (ULGH0010420221618178)
 BM - Real-time screen blind monitor (BM149425456200006666)
 BB - Real-time screen blind barge (BB149425456200006666)
 BW - Real-time screen blind whisper (BW149425456200006666)
